# py_cppmodel

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  Sandbox.ipynb  mypy.ini  py_cppmodel.py  pyproject.toml  requirements.txt  sample.cc  test.macos.sh  test.sh  test_parse_standard_library_includes.py  test_py_cppmodel.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python.yml
scripts/: gemini-sandbox.sh
src/xyz/: _libclang_mirrors.py  cppmodel.py
tests/: test_cppmodel.py  test_libclang_mappings.py  test_parse_standard_library_includes.py
