[project]
name = "py-cppmodel"
version = "0.0.1"
description = "A Python wrapper around clang's python bindings to generate a simple Python model of a C++ translation unit."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "J.B. Coe", email = "jonathanbcoe@gmail.com" }]
dependencies = [
    "clang>=14.0",
    "libclang>=18.1.1",
]

[project.urls]
Repository = "https://github.com/jbcoe/py_cppmodel"

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ty>=0.0.14",
]

[tool.pytest.ini_options]
addopts = "-n auto -v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "py_cppmodel.py",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
include = ["py_cppmodel.py"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",      # Bugbear
    "E",      # Pycodestyle
    "F",      # Pyflakes
    "I",      # Isort
    "W",      # Pycodestyle
]
ignore = [
    "B006", # Do not use mutable data structures for argument defaults TODO: Fix this.
    "B018", # Found useless expression. Either assign it to a variable or remove it. TODO: Fix this.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
